[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-assignment"
version = "0.1.0"
description = "FastAPI 과제 프로젝트"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "이름", email = "hahark@naver.com"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]"
]