[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junsu-community-be"
version = "0.1.0"
description = "Community Backend API"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart"
]

[tool.setuptools.packages.find]
where = ["."]
